# vibe-stack-mcp

./: .gitignore  PLANNING_SESSION.md  PODCAST_BOOKS_README.md  README.md  USAGE_EXAMPLES.md  claude_config.json  pyproject.toml  run_server.py  run_with_uvx.py  test_server.py  vibe_stack_planner.py
vibe_coder_stack_planner.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
